# whydotool

./: Cargo.toml  README.md  flake.nix
common/: Cargo.toml
ctl/: Cargo.toml
nix/: package.nix
src/: cli.rs  lib.rs  main.rs  output.rs  remote_desktop.rs  result  stdin.rs  virtual_keyboard.rs  virtual_pointer.rs
src/portal/: mod.rs  remote_desktop.rs  request.rs  screencast.rs  util.rs
src/virtual_device/: keyboard.rs  mod.rs  pointer.rs
src/virtual_device/keyboard/: mod.rs  portal.rs  traits.rs  util.rs  wayland.rs
src/virtual_device/pointer/: mod.rs  portal.rs  traits.rs  util.rs  wayland.rs
