[package]
name = "whydotool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"
smol = "2.0.2"
tempfile = "3.23.0"
wayland-client = "0.31.11"
wayland-protocols-misc = { version = "0.3.9", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
xkbcommon = "0.9.0"
zbus = "5.11.0"
#pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", rev = "fd3d8f7861a29c2eeaa4c393402e013578bb36d9" }
