[package]
name = "whydotool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "whydotool"
path = "src/main.rs"

[lib]
name = "libwhydotool"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
tempfile = "3.23.0"
wayland-client = "0.31.11"
wayland-protocols-misc = { version = "0.3.9", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
xkbcommon = "0.9.0"
rand = { version = "0.9.2", optional = true }
zbus = { version = "5.11.0", optional = true }
pipewire = { version = "0.9.2", optional = true }
nix = { version = "0.30.1", features = ["term", "fs"], default-features = false }
ctrlc = "3.5.0"

[features]
portals = ["dep:pipewire", "dep:zbus", "dep:rand"]
